--- a/proyectos/ruteo.html
+++ b/proyectos/ruteo.html
@@ -144,10 +144,10 @@
         <!-- Project Overview -->
         <section class="mb-12 fade-in-section">
             <div class="bg-white rounded-lg shadow-md p-8">
-                <h2 class="text-2xl font-bold text-[#004D40] mb-6">Resumen del Proyecto</h2>
+                <h2 class="text-2xl font-bold text-[#004D40] mb-6">Resumen del proyecto</h2>
                 <div class="grid md:grid-cols-2 gap-8">
                     <div>
-                        <h3 class="text-lg font-semibold text-[#00796B] mb-3">Objetivos Principales</h3>
+                        <h3 class="text-lg font-semibold text-[#00796B] mb-3">Objetivos principales</h3>
                         <ul class="space-y-2 text-gray-700">
                             <li class="flex items-start">
                                 <span class="w-2 h-2 bg-[#00796B] rounded-full mt-2 mr-3 flex-shrink-0"></span>
@@ -187,7 +187,7 @@
         <!-- Research Results -->
         <section class="mb-12 fade-in-section">
             <div class="bg-white rounded-lg shadow-md p-8">
-                <h2 class="text-2xl font-bold text-[#004D40] mb-6">Resultados de Investigación</h2>
+                <h2 class="text-2xl font-bold text-[#004D40] mb-6">Resultados de investigación</h2>
                 <div class="space-y-6">
                     <div class="border-l-4 border-[#FF9800] pl-6">
                         <h3 class="text-lg font-semibold text-[#00796B] mb-2">Ruteo por Arcos con Capacidad (CARP)</h3>
@@ -219,7 +219,7 @@
         <!-- Technical Approaches -->
         <section class="mb-12 fade-in-section">
             <div class="bg-white rounded-lg shadow-md p-8">
-                <h2 class="text-2xl font-bold text-[#004D40] mb-6">Enfoques Técnicos</h2>
+                <h2 class="text-2xl font-bold text-[#004D40] mb-6">Enfoques técnicos</h2>
                 <div class="grid md:grid-cols-2 gap-8">
                     <div class="bg-gradient-to-br from-orange-50 to-orange-100 p-6 rounded-lg">
                         <div class="flex items-center mb-4">
@@ -228,7 +228,7 @@
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path>
                                 </svg>
                             </div>
-                            <h3 class="text-lg font-semibold text-[#004D40]">Algoritmos de Dos Etapas</h3>
+                            <h3 class="text-lg font-semibold text-[#004D40]">Algoritmos de dos etapas</h3>
                         </div>
                         <p class="text-gray-700 text-sm">
                             Metodología que separa el problema en dos fases: primero la partición del grafo en componentes manejables, y luego la optimización de rutas dentro de cada componente.
@@ -242,7 +242,7 @@
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"></path>
                                 </svg>
                             </div>
-                            <h3 class="text-lg font-semibold text-[#004D40]">Modelos Probabilísticos</h3>
+                            <h3 class="text-lg font-semibold text-[#004D40]">Modelos probabilísticos</h3>
                         </div>
                         <p class="text-gray-700 text-sm">
                             Incorporación de incertidumbre y variabilidad en los modelos de ruteo, permitiendo soluciones más robustas ante condiciones cambiantes del mundo real.
@@ -255,7 +255,7 @@
         <!-- Impact and Applications -->
         <section class="mb-12 fade-in-section">
             <div class="bg-white rounded-lg shadow-md p-8">
-                <h2 class="text-2xl font-bold text-[#004D40] mb-6">Impacto y Aplicaciones</h2>
+                <h2 class="text-2xl font-bold text-[#004D40] mb-6">Impacto y aplicaciones</h2>
                 <div class="grid md:grid-cols-3 gap-6">
                     <div class="text-center p-4 bg-gray-50 rounded-lg">
                         <div class="w-16 h-16 bg-[#FF9800] rounded-full flex items-center justify-center mx-auto mb-4">
@@ -293,7 +293,7 @@
         <!-- Publications -->
         <section class="mb-12 fade-in-section">
             <div class="bg-white rounded-lg shadow-md p-8">
-                <h2 class="text-2xl font-bold text-[#004D40] mb-6">Publicaciones Relacionadas</h2>
+                <h2 class="text-2xl font-bold text-[#004D40] mb-6">Publicaciones relacionadas</h2>
                 <div class="space-y-4">
                     <div class="border border-gray-200 rounded-lg p-4 hover:shadow-md transition-shadow">
                         <h3 class="font-semibold text-[#00796B] mb-2">Resolución del problema de ruteo por arcos con capacidad: un enfoque mejorado de dos etapas</h3>
