--- a/proyectos/zonificacion-agricola.html
+++ b/proyectos/zonificacion-agricola.html
@@ -144,7 +144,7 @@
         <!-- Project Overview -->
         <section class="mb-12 fade-in-section">
             <div class="bg-white rounded-lg shadow-md p-8">
-                <h2 class="text-2xl font-bold text-[#004D40] mb-6">Resumen del Proyecto</h2>
+                <h2 class="text-2xl font-bold text-[#004D40] mb-6">Resumen del proyecto</h2>
                 <div class="grid md:grid-cols-2 gap-8">
                     <div>
                         <h3 class="text-lg font-semibold text-[#00796B] mb-3">Objetivos principales</h3>
