--- a/simulador/old/BP_GA.html
+++ b/simulador/old/BP_GA.html
@@ -25,25 +25,24 @@
 
 <body class="bg-slate-50 text-slate-800">
     <div class="container mx-auto p-4 md:p-8 relative">
-         <div class="absolute top-4 right-4 flex flex-col sm:flex-row items-end sm:items-center gap-2 sm:gap-4 z-10">
-           <a href="../pasarela/buymeacoffee.html" target="_blank" rel="noopener noreferrer" class="inline-flex items-center gap-2 bg-yellow-400 text-gray-900 font-bold py-2 px-3 sm:px-4 rounded-lg shadow-sm transition-colors duration-300 hover:bg-yellow-500 text-sm sm:text-base">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" sm:width="20" sm:height="20" fill="currentColor" viewBox="0 0 16 16"><path d="M1 12.5a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 0 1h-13a.5.5 0 0 1-.5-.5M2 4v6h10V4zm11.5 0a.5.5 0 0 0-.5.5v5a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-5a.5.5 0 0 0-.5-.5zM1 3.5a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 0 1h-13a.5.5 0 0 1-.5-.5m10.854-1.354a.5.5 0 0 0-.708 0L9 3.293 7.854 2.146a.5.5 0 1 0-.708.708L8.293 4 7.146 5.146a.5.5 0 1 0 .708.708L9 4.707l1.146 1.147a.5.5 0 0 0 .708-.708L9.707 4l1.147-1.146a.5.5 0 0 0 0-.708"/></svg>
-                <span class="hidden sm:inline">Invítame un café</span>
-                <span class="sm:hidden">Café</span>
+         <div class="absolute top-4 right-4 flex items-center gap-4 z-10">
+           <a href="../pasarela/buymeacoffee.html" target="_blank" rel="noopener noreferrer" class="inline-flex items-center gap-2 bg-yellow-400 text-gray-900 font-bold py-2 px-4 rounded-lg shadow-sm transition-colors duration-300 hover:bg-yellow-500">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 16 16"><path d="M1 12.5a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 0 1h-13a.5.5 0 0 1-.5-.5M2 4v6h10V4zm11.5 0a.5.5 0 0 0-.5.5v5a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-5a.5.5 0 0 0-.5-.5zM1 3.5a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 0 1h-13a.5.5 0 0 1-.5-.5m10.854-1.354a.5.5 0 0 0-.708 0L9 3.293 7.854 2.146a.5.5 0 1 0-.708.708L8.293 4 7.146 5.146a.5.5 0 1 0 .708.708L9 4.707l1.146 1.147a.5.5 0 0 0 .708-.708L9.707 4l1.147-1.146a.5.5 0 0 0 0-.708"/></svg>
+                <span>Invítame un café</span>
             </a>
-            <a href="../index.html" class="bg-white hover:bg-slate-100 text-slate-600 font-semibold py-2 px-3 sm:px-4 border border-slate-200 rounded-lg shadow-sm flex items-center transition-colors text-sm sm:text-base">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 sm:h-5 sm:w-5 mr-1 sm:mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" /></svg>
+            <a href="../index.html" class="bg-white hover:bg-slate-100 text-slate-600 font-semibold py-2 px-4 border border-slate-200 rounded-lg shadow-sm flex items-center transition-colors">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" /></svg>
                 Inicio
             </a>
         </div>
 
         <header class="text-center mb-8 pt-16">
-            <h1 class="text-2xl sm:text-3xl lg:text-4xl font-bold text-slate-900">Desafío de contenedores: optimiza el espacio</h1>
-            <p class="text-sm sm:text-base lg:text-lg text-slate-600 mt-2">Arrastra los objetos a los contenedores. ¡Usa la menor cantidad posible!</p>
+            <h1 class="text-4xl font-bold text-slate-900">Desafío de contenedores: optimiza el espacio</h1>
+            <p class="text-lg text-slate-600 mt-2">Arrastra los objetos a los contenedores. ¡Usa la menor cantidad posible!</p>
         </header>
 
         <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
-            <div class="lg:col-span-1 self-start lg:sticky lg:top-8 space-y-8">
+            <div class="lg:col-span-1 self-start sticky top-8 space-y-8">
                 <div class="bg-white p-6 rounded-xl shadow-md">
                     <h2 class="text-2xl font-bold mb-4">Controles</h2>
                     <div class="space-y-4 mb-6">
@@ -63,9 +62,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="flex flex-col sm:flex-row space-y-2 sm:space-y-0 sm:space-x-4">
-                        <button id="reset-button" class="w-full bg-blue-600 text-white font-bold py-3 px-4 sm:px-6 rounded-lg hover:bg-blue-700 text-sm sm:text-base">Generar objetos</button>
-                        <button id="solve-button" class="w-full bg-teal-600 text-white font-bold py-3 px-4 sm:px-6 rounded-lg hover:bg-teal-700 disabled:bg-slate-400 disabled:cursor-not-allowed text-sm sm:text-base">Solución con algoritmo</button>
+                    <div class="flex space-x-4">
+                        <button id="reset-button" class="w-full bg-blue-600 text-white font-bold py-3 px-6 rounded-lg hover:bg-blue-700">Generar objetos</button>
+                        <button id="solve-button" class="w-full bg-teal-600 text-white font-bold py-3 px-6 rounded-lg hover:bg-teal-700 disabled:bg-slate-400 disabled:cursor-not-allowed">Solución con algoritmo</button>
                     </div>
                     <p id="loading-text" class="mt-4 text-slate-500 hidden text-center">Calculando...</p>
                 </div>
@@ -85,19 +84,19 @@
             <div class="lg:col-span-2">
                 <div class="bg-white p-6 rounded-xl shadow-md mb-8">
                     <h2 class="text-2xl font-bold mb-4">Objetos disponibles</h2>
-                    <div id="items-container" class="min-h-[100px] p-4 bg-slate-100 rounded-lg grid grid-cols-3 sm:grid-cols-4 md:grid-cols-6 lg:grid-cols-8 gap-4">
+                    <div id="items-container" class="min-h-[100px] p-4 bg-slate-100 rounded-lg grid grid-cols-4 sm:grid-cols-6 md:grid-cols-8 gap-4">
                     </div>
                 </div>
 
                 <div class="bg-white p-6 rounded-xl shadow-md">
                     <div class="flex justify-between items-center mb-4">
                         <h2 class="text-2xl font-bold">Contenedores</h2>
-                        <div id="comparison-controls" class="hidden flex flex-col sm:flex-row space-y-2 sm:space-y-0 sm:space-x-2">
-                            <button id="view-user-solution" class="bg-slate-500 text-white font-bold py-2 px-3 rounded-lg hover:bg-slate-600 text-xs sm:text-sm">Ver tu solución</button>
-                            <button id="view-ga-solution" class="bg-teal-500 text-white font-bold py-2 px-3 rounded-lg hover:bg-teal-600 text-xs sm:text-sm">Ver solución del algoritmo</button>
+                        <div id="comparison-controls" class="hidden space-x-2">
+                            <button id="view-user-solution" class="bg-slate-500 text-white font-bold py-2 px-4 rounded-lg hover:bg-slate-600 text-sm">Ver tu solución</button>
+                            <button id="view-ga-solution" class="bg-teal-500 text-white font-bold py-2 px-4 rounded-lg hover:bg-teal-600 text-sm">Ver solución del algoritmo</button>
                         </div>
                     </div>
-                    <div id="bins-container" class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-x-4 gap-y-10">
+                    <div id="bins-container" class="grid grid-cols-6 gap-x-4 gap-y-10">
                     </div>
                 </div>
             </div>
