--- a/recursos/investigacion-operaciones.html
+++ b/recursos/investigacion-operaciones.html
@@ -369,6 +369,14 @@
                                 </div>
                                 <p class="text-sm text-gray-600">Crea particiones de zonas homogéneas y conexas</p>
                             </a>
+                            
+                            <a href="../simulador/TSP_GA.html" class="bg-white p-4 rounded-lg border border-gray-200 hover:border-indigo-300 hover:shadow-md transition-all duration-300 group">
+                                <div class="flex items-center mb-2">
+                                    <span class="text-2xl mr-3">🏙️</span>
+                                    <h5 class="font-semibold text-[#004D40] group-hover:text-indigo-600">Traveling Salesman</h5>
+                                </div>
+                                <p class="text-sm text-gray-600">Encuentra la ruta más corta visitando todas las ciudades</p>
+                            </a>
                         </div>
                     </div>
 
