--- a/proyectos/movilidad-sustentable.html
+++ b/proyectos/movilidad-sustentable.html
@@ -129,18 +129,18 @@
                     </svg>
                 </div>
                 <div>
-                    <h1 class="text-3xl font-bold text-[#004D40] mb-2">Movilidad Sustentable</h1>
-                    <p class="text-lg text-gray-600">Modelos y Algoritmos de Optimización para Sistemas de Transporte Urbano</p>
+                    <h1 class="text-3xl font-bold text-[#004D40] mb-2">Movilidad sustentable</h1>
+                    <p class="text-lg text-gray-600">Modelos y algoritmos de optimización para sistemas de transporte urbano</p>
                 </div>
             </div>
             
             <div class="grid md:grid-cols-3 gap-6 mt-8">
                 <div class="bg-[#F5F5F5] p-4 rounded-lg">
-                    <h3 class="font-semibold text-[#004D40] mb-2">Línea Estratégica</h3>
+                    <h3 class="font-semibold text-[#004D40] mb-2">Línea estratégica</h3>
                     <p class="text-sm text-gray-700">Pronaces "Energía y cambio climático"</p>
                 </div>
                 <div class="bg-[#F5F5F5] p-4 rounded-lg">
-                    <h3 class="font-semibold text-[#004D40] mb-2">Enfoque Principal</h3>
+                    <h3 class="font-semibold text-[#004D40] mb-2">Enfoque principal</h3>
                     <p class="text-sm text-gray-700">Reducción de emisiones y optimización energética</p>
                 </div>
                 <div class="bg-[#F5F5F5] p-4 rounded-lg">
@@ -156,7 +156,7 @@
             <div class="lg:col-span-2 space-y-8">
                 <!-- Overview -->
                 <section class="bg-white rounded-lg shadow-md p-6">
-                    <h2 class="text-2xl font-bold text-[#004D40] mb-4">Problemática y Contexto</h2>
+                    <h2 class="text-2xl font-bold text-[#004D40] mb-4">Problemática y contexto</h2>
                     <p class="text-gray-700 leading-relaxed mb-4">
                         El transporte consume el 42.8% del total de energía generada, donde el 90% corresponde a vehículos particulares. La flota vehicular ha crecido 6.2% anual, rebasando el crecimiento económico y poblacional. Las emisiones representan el 35% del CO₂ en América Latina, con costos sociales de hasta 4% del PIB en ciudades mexicanas.
                     </p>
@@ -194,19 +194,19 @@
                     <h2 class="text-2xl font-bold text-[#004D40] mb-4">Impacto Esperado</h2>
                     <div class="grid md:grid-cols-2 gap-6">
                         <div class="bg-gradient-to-br from-[#E8F5E8] to-[#F0F9FF] p-4 rounded-lg">
-                            <h3 class="font-semibold text-[#004D40] mb-2">Reducción de Emisiones</h3>
+                            <h3 class="font-semibold text-[#004D40] mb-2">Reducción de emisiones</h3>
                             <p class="text-sm text-gray-700">Contribuir a la disminución del 35% de emisiones de CO₂ del sector transporte en América Latina.</p>
                         </div>
                         <div class="bg-gradient-to-br from-[#E8F5E8] to-[#F0F9FF] p-4 rounded-lg">
-                            <h3 class="font-semibold text-[#004D40] mb-2">Eficiencia Energética</h3>
+                            <h3 class="font-semibold text-[#004D40] mb-2">Eficiencia energética</h3>
                             <p class="text-sm text-gray-700">Optimización del 42.8% de demanda energética actual del sector transporte.</p>
                         </div>
                         <div class="bg-gradient-to-br from-[#E8F5E8] to-[#F0F9FF] p-4 rounded-lg">
-                            <h3 class="font-semibold text-[#004D40] mb-2">Costos Sociales</h3>
+                            <h3 class="font-semibold text-[#004D40] mb-2">Costos sociales</h3>
                             <p class="text-sm text-gray-700">Reducción de hasta 4% del PIB en costos asociados a congestión y contaminación.</p>
                         </div>
                         <div class="bg-gradient-to-br from-[#E8F5E8] to-[#F0F9FF] p-4 rounded-lg">
-                            <h3 class="font-semibold text-[#004D40] mb-2">Transición Energética</h3>
+                            <h3 class="font-semibold text-[#004D40] mb-2">Transición energética</h3>
                             <p class="text-sm text-gray-700">Apoyo a la transición energética justa y sustentable acorde con México.</p>
                         </div>
                     </div>
@@ -217,7 +217,7 @@
             <div class="lg:col-span-1 space-y-6">
                 <!-- Key Statistics -->
                 <div class="bg-white rounded-lg shadow-md p-6">
-                    <h3 class="text-xl font-bold text-[#004D40] mb-4">Datos Clave del Sector</h3>
+                    <h3 class="text-xl font-bold text-[#004D40] mb-4">Datos clave del sector</h3>
                     <div class="space-y-4">
                         <div class="bg-red-50 p-3 rounded-lg border-l-4 border-red-400">
                             <div class="text-sm text-gray-600">Demanda Energética</div>
