--- a/recursos/investigacion-operaciones.html
+++ b/recursos/investigacion-operaciones.html
@@ -385,6 +385,14 @@
                                 </div>
                                 <p class="text-sm text-gray-600">Colorea los nodos sin que adyacentes tengan el mismo color</p>
                             </a>
+                            
+                            <a href="../simulador/OrderPicking.html" class="bg-white p-4 rounded-lg border border-gray-200 hover:border-indigo-300 hover:shadow-md transition-all duration-300 group">
+                                <div class="flex items-center mb-2">
+                                    <span class="text-2xl mr-3">📋</span>
+                                    <h5 class="font-semibold text-[#004D40] group-hover:text-indigo-600">Order Picking</h5>
+                                </div>
+                                <p class="text-sm text-gray-600">Optimiza tu ruta de recogida en el almacén</p>
+                            </a>
                         </div>
                     </div>
 
