--- a/simulador/SPP_GA.html
+++ b/simulador/SPP_GA.html
@@ -717,7 +717,19 @@
                 }
             }
         });
-    </script>    
+    </script>
+
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZLLCPFX9W7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZLLCPFX9W7');
+</script>
+
 </body>
 </html>
 
