--- a/simulador/UAFLP.html
+++ b/simulador/UAFLP.html
@@ -720,6 +720,18 @@
             window.addEventListener('resize', debounce(initializeLayout, 200));
         });
     </script>
+
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZLLCPFX9W7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZLLCPFX9W7');
+</script>
+
 </body>
 </html>
 
