--- a/pasarela/buymeacoffee.html
+++ b/pasarela/buymeacoffee.html
@@ -15,6 +15,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apoya mi Trabajo - Jonás Velasco</title>
+    <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
+
     <!-- Tailwind CSS para un diseño moderno y responsivo -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts: Inter -->
