--- a/recursos/programacion.html
+++ b/recursos/programacion.html
@@ -15,7 +15,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Programación - Dr. Jonás Velasco</title>
-    
+    <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
+
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     
