--- a/simulador/BP_GA.html
+++ b/simulador/BP_GA.html
@@ -15,6 +15,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bin Packing - Desafío de Contenedores</title>
+    <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
