--- a/simulador/TWVRP.html
+++ b/simulador/TWVRP.html
@@ -14,6 +14,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ruteo de Vehículos (VRPTW)</title>
+    <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
