--- a/sb/sb2/olivia2.html
+++ b/sb/sb2/olivia2.html
@@ -14,7 +14,7 @@
 
   <meta charset="UTF-8">
   <title>Olivia y el Festival de las Soluciones Brillantes</title>
-  <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="../../img/favicon.ico">
 
   <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;700&family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
   <style>
