--- a/sb/sb1/olivia1.html
+++ b/sb/sb1/olivia1.html
@@ -15,7 +15,7 @@
 
   <meta charset="UTF-8">
   <title>Olivia en la Tierra de la Optimización</title>
-  <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="../../img/favicon.ico">
 
   <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;700&family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
   <style>
