--- a/recursos/programacion.html
+++ b/recursos/programacion.html
@@ -210,7 +210,7 @@
                         </div>
                     </div>
                     <div class="flex flex-wrap gap-3">
-                        <a href="#" class="bg-[#00796B] text-white px-6 py-3 rounded-lg font-semibold hover:bg-[#004D40] transition-colors duration-300">
+                        <a href="../rprivado2.html" class="bg-[#00796B] text-white px-6 py-3 rounded-lg font-semibold hover:bg-[#004D40] transition-colors duration-300">
                             🚀 Acceder al recurso
                         </a>
                         <!--<a href="../programacion/index.html" class="bg-[#00796B] text-white px-6 py-3 rounded-lg font-semibold hover:bg-[#004D40] transition-colors duration-300">
