--- a/rprivado2.html
+++ b/rprivado2.html
@@ -129,7 +129,7 @@
                 } finally {
                     if (submitButton) {
                         submitButton.disabled = false;
-                        submitButton.textContent = 'Acceder al Recurso Avanzado';
+                        submitButton.textContent = 'Acceder';
                     }
                 }
             });
