--- a/rprivado.html
+++ b/rprivado.html
@@ -126,7 +126,9 @@
                         const data = await response.json();
                         if (response.ok) {
                             sessionStorage.setItem('privateAccessGranted', 'true');
-                            window.location.href = 'recursos-privados.html';
+                            sessionStorage.setItem('accessTime', new Date().getTime().toString());
+
+                            window.location.href = data.redirectUrl || 'index.html';
                         } else {
                             errorMessage.textContent = data.message || "Error desconocido.";
                             errorMessage.classList.remove('hidden');
