--- a/recursos-privados.html
+++ b/recursos-privados.html
@@ -236,7 +236,7 @@
                 
                 // Redirect after 3 seconds
                 setTimeout(() => {
-                    window.location.href = '../rprivado2.html';
+                    window.location.href = '../rprivado.html';
                 }, 3000);
                 
                 return false;
