--- a/recursos-privados.html
+++ b/recursos-privados.html
@@ -58,7 +58,7 @@
             <div class="text-6xl mb-4">🔒</div>
             <h2 class="text-2xl font-bold mb-4 text-red-600">Acceso restringido</h2>
             <p class="text-gray-600 mb-6">Esta página requiere autenticación previa.</p>
-            <a href="../rprivado.html" class="bg-purple-600 text-white px-6 py-3 rounded-lg hover:bg-purple-700 transition-colors">
+            <a href="../rprivado.html" class="bg-[#00796B] text-white px-6 py-3 rounded-lg hover:bg-[#004D40] transition-colors">
                 Iniciar Sesión
             </a>
         </div>
