--- a/recursos/investigacion-operaciones.html
+++ b/recursos/investigacion-operaciones.html
@@ -405,6 +405,15 @@
                                 </div>
                                 <p class="text-sm text-gray-600">Optimiza tu ruta de recogida en el almacén</p>
                             </a>
+                            
+                            <a href="../simulador/UCP.html" class="bg-white p-4 rounded-lg border border-gray-200 hover:border-indigo-300 hover:shadow-md transition-all duration-300 group">
+                                <div class="flex items-center mb-2">
+                                    <span class="text-2xl mr-3">⚡</span>
+                                    <h5 class="font-semibold text-[#004D40] group-hover:text-indigo-600">Unit Commitment</h5>
+                                </div>
+                                <p class="text-sm text-gray-600">Programa unidades de generación eléctrica</p>
+                            </a>
+                            
                         </div>
                     </div>
 
