--- a/or-in-action/MCP_ags.html
+++ b/or-in-action/MCP_ags.html
@@ -26,8 +26,8 @@
         body {
             margin: 0;
             padding: 0;
-            font-family: 'Inter', sans-serif;
-            background: #EEDFCF;
+            font-family: 'Arial', sans-serif;
+            background: #f9f4f5ff;
             color: white;
             min-height: 100vh;
             display: flex;
@@ -71,7 +71,8 @@
         }
         #map {
             flex: 1;
-            min-height: 500px;
+            min-height: 80vh;
+            width: 100%;
         }
         main {
             flex: 1;
@@ -80,14 +81,35 @@
         }
         .info-panel {
             position: absolute;
-            top: 20px;
-            right: 20px;
-            background: rgba(255, 255, 255, 0.9);
-            color: black;
-            padding: 15px;
-            border-radius: 8px;
-            max-width: 300px;
+            top: 80px;
+            right: 200px;
+            background: rgba(255, 255, 255, 0.95);
+            color: #1a1a1a;
+            padding: 20px;
+            border-radius: 12px;
+            max-width: 320px;
             z-index: 1000;
+            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
+            border: 1px solid rgba(255, 255, 255, 0.8);
+            backdrop-filter: blur(10px);
+            font-family: 'Arial', sans-serif;
+        }
+        .info-panel h3 {
+            margin: 0 0 15px 0;
+            font-size: 1.25rem;
+            font-weight: 600;
+            color: #315c2bff;
+            border-bottom: 2px solid #e5e7eb;
+            padding-bottom: 8px;
+        }
+        .info-panel p {
+            margin: 10px 0;
+            line-height: 1.5;
+            font-size: 0.9rem;
+            color: #4b5563;
+        }
+        .info-panel p:first-child {
+            margin-top: 0;
         }
         .completion-modal {
             position: fixed;
@@ -148,10 +170,10 @@
 </head>
 <body>
 
-    <div class="container mx-auto p-4 md:p-8 relative">
-            <div class="absolute top-4 right-4 flex items-center gap-4 z-10">
-
-           <a href="../pasarela/buymeacoffee.html" 
+    <!-- Header Navigation -->
+    <header class="w-full bg-slate-50 border-b border-slate-200 sticky top-0 z-50">
+        <div class="container mx-auto px-4 py-4 flex justify-end items-center gap-4">
+            <a href="../pasarela/buymeacoffee.html" 
                target="_blank" 
                rel="noopener noreferrer" 
                class="inline-flex items-center gap-2 bg-yellow-400 text-gray-900 font-bold py-2 px-4 rounded-lg shadow-sm transition-colors duration-300 hover:bg-yellow-500">
@@ -168,11 +190,12 @@
                 </svg>
                 Inicio
             </a>
-</div>
+        </div>
+    </header>
 
     <div id="controls">
         <div id="data-loading">
-            <h2>Cargar datos de accidentes en Aguascalientes</h2>
+            <h2 style="font-size: 1.5rem; font-weight: bold; margin-bottom: 20px;">Cargar datos de accidentes en Aguascalientes</h2>
             <div id="remote-loading">
                 <p>Selecciona el año de los datos:</p>
                 <select id="year-select">
@@ -278,8 +301,8 @@
     </main>
 
     <!-- Footer & Contact -->
-    <footer id="contact" class="bg-[#333333] text-white mt-auto">
-        <div class="container mx-auto px-6 py-10">
+    <footer id="contact" class="w-full bg-[#333333] text-white mt-auto">
+        <div class="w-full px-6 py-10">
             <div class="text-center">
              <!--   <h2 class="text-2xl font-bold mb-4">Ponte en Contacto</h2> -->
                 <p class="text-gray-300 mb-2">Si tienes alguna pregunta o te gustaría colaborar, no dudes en escribirme.</p>
